--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,29 +1,29 @@
-cmake_minimum_required(VERSION 3.10)
-project(halo C)
+cmake_minimum_required(VERSION 3.12)
+project(halo C) # Change app name
 
-set(CMAKE_C_STANDARD 99)
+set(CMAKE_C_STANDARD 23)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_C_EXTENSIONS OFF)
 
 # Add compiler warnings
-if(CMAKE_C_COMPILER_ID MATCHES "GNU|Clang")
+if(CMAKE_C_COMPILER_ID MATCHES "GNU|GCC|Clang|AppleClang")
 	add_compile_options(-Wall -Wextra -Wpedantic)
 elseif(MSVC)
 	add_compile_options(/W4)
 endif()
 
+# Find raylib
+# find_package(raylib REQUIRED)
+
 # Source files
 file(GLOB_RECURSE SOURCES "src/*.c")
-file(GLOB_RECURSE HEADERS "include/*.h")
-
-# Include directories
-include_directories(include)
+file(GLOB_RECURSE HEADERS "src/*.h")
 
 # Executable
 add_executable(${PROJECT_NAME} ${SOURCES} ${HEADERS})
 
-# Add subdirectories if needed
-# add_subdirectory(lib)
+# Link raylib
+# target_link_libraries(${PROJECT_NAME} raylib)
 
-# Link libraries
-# target_link_libraries(${PROJECT_NAME} PRIVATE your_library)
+# Include directories
+target_include_directories(${PROJECT_NAME} PRIVATE src)
